# lyric-overlay

./: .gitignore  README.md  package-lock.json  package.json
desktop/: index.html  package.json
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  ws_server.rs
desktop/src/components/: LyricsDisplay.tsx  MinimalLyrics.tsx  ProgressBar.tsx
desktop/src/hooks/: usePlayback.ts  useSettings.ts
desktop/src/lib/: lrcParser.ts  lyricsEngine.test.ts  lyricsEngine.ts  lyricsFetcher.ts  lyricsStore.ts
desktop/src/pages/: ControlPanel.tsx  Overlay.tsx
extension/: background.js  content.js  manifest.json  popup.html  popup.js
test-server/: package.json  ws-server.js
