[package]
name = "desktop"
version = "0.1.0"
description = "Lyric Overlay Desktop App"
authors = ["you"]
edition = "2021"
default-run = "desktop"  

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — Tauri uses tokio internally, we just enable it fully
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"

# For accepting TCP connections
futures-util = "0.3"
